# thirty-four-from-canopy-rewrite

./: Cargo.toml  README.md  chrome_explained.md
CanopyResults/: canopy_results.json
src/: _01_http_client.rs  _02_serialization.rs  _03_scraping_edge.rs  _04_scraping_chrome.rs  _05_links.rs  lib.rs  main.rs
