[package]
name = "thirty-four-from-canopy-rewrite"
version = "0.1.0"
edition = "2024"

[dependencies]
# HTTP client (like FsHttp)
reqwest = { version = "0.11", features = ["json", "cookies"] }

# JSON serialization/deserialization (like Thoth.Json)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime (required for async/await)
tokio = { version = "1", features = ["full"] }

# Browser automation - Selenium WebDriver client (like Canopy)
thirtyfour = "0.31"

# Optional: Better async utilities
futures = "0.3"

# Optional: Logging (helpful for debugging scraping)
dotenvy = "0.15.7"

[dev-dependencies]
# For testing
# tokio-test = "0.4"